--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "PORT=3000 node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
