--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "PORT=3000 node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,6 +15,6 @@
     "express": "^4.16.4"
   },
   "engines": {
-    "node": ">=9.0.0"
+    "node": "10.x"
   }
 }
